vlib/v/checker/tests/generics_struct_init_err.out
vlib/v/checker/tests/generics_struct_init_err.vv:14:2: notice: uninitialized `fn` struct fields are not allowed, since they can result in segfaults; use `?fn` or `@[required]` or initialize the field with `=` (if you absolutely want to have unsafe function pointers, use `= unsafe { nil }`)
   12 | 
   13 | struct FnHolder2[T] {
   14 |     func fn (int) int
      |     ~~~~~~~~~~~~~~~~~
   15 | }
   16 |
vlib/v/checker/tests/generics_struct_init_err.vv:67:8: error: could not infer generic type `T` in generic struct `FnHolder2[T]`
   65 |     ret = holder_call_22(neg, 5)
   66 |     assert ret == -5
   67 |     ret = FnHolder2{neg}.call(6)
      |           ~~~~~~~~~~~~~~
   68 |     assert ret == -6
   69 | }
vlib/v/checker/tests/generics_struct_init_err.vv:67:23: error: could not infer generic type `T` in call to `call`
   65 |     ret = holder_call_22(neg, 5)
   66 |     assert ret == -5
   67 |     ret = FnHolder2{neg}.call(6)
      |                          ~~~~~~~
   68 |     assert ret == -6
   69 | }
vlib/v/checker/tests/generics_struct_init_err.vv:44:25: error: could not infer generic type `T` in call to `call`
   42 | 
   43 | fn holder_call_12[T](func T, a int) int {
   44 |     return FnHolder1{func}.call(a)
      |                            ~~~~~~~
   45 | }
   46 |
vlib/v/checker/tests/generics_struct_init_err.vv:48:25: error: could not infer generic type `T` in call to `call`
   46 | 
   47 | fn holder_call_22[T](func T, a int) int {
   48 |     return FnHolder2{func}.call(a)
      |                            ~~~~~~~
   49 | }
   50 |
